--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,6 @@
 [submodule "HiggsProperties"]
 	path = HiggsProperties
 	url = https://github.com/FHead/PhysicsHiggsProperties
+[submodule "JECGlobalFit"]
+	path = JECGlobalFit
+	url = https://github.com/FHead/PhysicsJECGlobalFit
