--- a/.gitmodules
+++ b/.gitmodules
@@ -62,3 +62,7 @@
 	path = L1TriggerUpgrade
 	url = https://github.com/FHead/PhysicsL1TriggerUpdate
 	branch = master
+[submodule "L1TriggerUpgrade2018"]
+	path = L1TriggerUpgrade2018
+	url = https://github.com/FHead/PhysicsL1TriggerUpdate2018
+	branch = master
