--- a/.gitmodules
+++ b/.gitmodules
@@ -74,3 +74,7 @@
 	path = JetScape
 	url = https://github.com/FHead/PhysicsJetScape
 	branch = master
+[submodule "HIJetRAA"]
+	path = HIJetRAA
+	url = https://github.com/FHead/PhysicsHIJetRAA
+	branch = master
