--- a/.gitmodules
+++ b/.gitmodules
@@ -121,3 +121,6 @@
 [submodule "HIZHadron2022"]
 	path = HIZHadron2022
 	url = git@github.com:FHead/PhysicsHIZHadron2022.git
+[submodule "EEJetEEC"]
+	path = EEJetEEC
+	url = git@github.com:FHead/PhysicsEEJetEEC.git
