--- a/.gitmodules
+++ b/.gitmodules
@@ -124,3 +124,6 @@
 [submodule "EEJetEEC"]
 	path = EEJetEEC
 	url = git@github.com:FHead/PhysicsEEJetEEC.git
+[submodule "HIZHadronEEC"]
+	path = HIZHadronEEC
+	url = git@github.com:FHead/PhysicsZHadronEEC.git
